--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bae_systems_mp",
+  "name": "mission_planner",
   "version": "1.0.0",
   "description": "BAE Systems mission planner for a pair of unmanned aircraft carriers",
   "main": "main.js",
